updated ignore file to ignore everything but .java files

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# All i care about are the .java files. ignore everything else
+*.iml
+*.class
+*.xml
+*.jar
+*.MF
